--- a/package.json
+++ b/package.json
@@ -41,8 +41,13 @@
     ]
   },
   "devDependencies": {
+    "@eslint/js": "^9.10.0",
     "autoprefixer": "^10.4.20",
+    "eslint": "^8.57.1",
+    "eslint-plugin-react": "^7.36.1",
+    "globals": "^15.9.0",
     "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.12"
+    "tailwindcss": "^3.4.12",
+    "typescript-eslint": "^8.6.0"
   }
 }
