--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.3.7",
     "@types/react-dom": "^18.3.0",
     "react": "^18.3.1",
+    "react-chrono": "^2.6.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "react-spring-3d-carousel": "^1.3.4",
