--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.18.108",
     "@types/react": "^18.3.7",
     "@types/react-dom": "^18.3.0",
+    "moment": "^2.30.1",
     "node-fetch-cache": "^5.0.2",
     "react": "^18.3.1",
     "react-chrono": "^2.6.1",
